# va-sensor-emulator

./: Cargo.toml  README.md
.github/workflows/: coverage.sh  coverage.yaml  release_deb_package.yaml  test.yaml
src/: amplitude.rs  angle.rs  buffer.rs  complex.rs  main.rs  service.rs
src/conf/: conf_keywd.rs  diag_keywd.rs  mod.rs
src/debug/: dbg_id.rs  mod.rs
src/error/: mod.rs  str_err.rs
src/main_service/: conf_kewd.rs  main_service.rs  main_service_config.rs  mod.rs  udp_header.rs  udp_message.rs  upd_message.rs
src/service/: conf_duration.rs  conf_freq.rs  mod.rs  service_config.rs
src/stuff/: approx_eq.rs  mod.rs  type_of.rs
src/tests/: amplitude_test.rs  angle_test.rs  buffer_test.rs  main_service_config.yaml  main_service_config_test.rs  main_service_test.rs  mod.rs  udp_header_test.rs  udp_message_test.rs  upd_message_test.rs
